src/App.css
.App {
  text-align: center;
  flex-direction: column;
  display: flex;
  min-height: 100vh;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #00161a;
  min-height: 8vh;
  display: flex;
  justify-content: left;
  align-items: center;
  font-size: calc(10px + 2vmin);
  color: white;
  padding: 10px;
}

.App-footer {
  background-color: #fff;
  min-height: 4vh;
  display: flex;
  justify-content: left;
  align-items: center;
  font-size: calc(7px + 1vmin);
  color: #222;
  padding: 10px;
}

.App-body {
  background-color: #e8e8e8;
  justify-content: center;
  align-items: center;
  display: flex;
  flex: 1;
  padding: 5px;
}

.App-link {
  color: #01a7ca;
  text-decoration: none;
  display: flex;
  align-items: center;
}

.Converter-Container {
  display: flex;
  width: 80%;
  min-height: 450px;
}

.Github-logo {
  fill: #01a7ca;
  margin-right: 5px;
  max-height: 45px;
  max-width: 45px;
}

button {
  display: flex;
  max-height: 40px;
  background-color: #01a7ca;
  color: white;
  border: 0;
  cursor: pointer;
}

textarea {
  align-items: flex-start;
  flex: 1;
  margin-left: 25px;
  margin-right: 25px;
  margin-bottom: 25px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

